--- a/src/index.html
+++ b/src/index.html
@@ -18,63 +18,9 @@
 <div class="container">
     <div class="block">
         <div class="big-card">
-            <!-- <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
+            <div class="services-container">
+                
             </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div>
-                    <p>Uptime:</p>
-                    <div class="card-desc">
-                        <p>400d 15h 54m 48s</p>
-                    </div>
-                </div>
-            </div> -->
-            Services (comming soon)
         </div>
         <div class="big-card">
             <div class="ascii-art">
@@ -100,6 +46,18 @@
         </div>
         <div class="card">
             <div class="card-desc">
+                <p>Ram usage:</p>
+                <div style="display: flex; flex-direction: row; gap: 0.5em">
+                    <p id="ram-usage-text">0%</p>
+                    <small><span id="ram-usage-text-mb"></span></small>
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-fill" id="ram-usage" style="width: 0%"></div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-desc">
                 <p>Cpu usage:</p>
                 <p id="cpu-usage-text">0%</p>
                 <div class="progress-bar">
@@ -109,19 +67,17 @@
         </div>
         <div class="card">
             <div class="card-desc">
-                <p>Cpu Temp:</p>
-                <p id="cpu-temp-text">0</p>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="cpu-temp" style="width: 0%"></div>
+                <p>Cpu Cores:</p>
+                <div class="cpu-cores-container">
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="card-desc">
-                <p>Ram usage:</p>
-                <p id="ram-usage-text">0%</p>
+                <p>Cpu Temp:</p>
+                <p id="cpu-temp-text">0</p>
                 <div class="progress-bar">
-                    <div class="progress-bar-fill" id="ram-usage" style="width: 0%"></div>
+                    <div class="progress-bar-fill" id="cpu-temp" style="width: 0%"></div>
                 </div>
             </div>
         </div>
