New favicon, copyright

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>vo1ternotdeveloper's dashboard</title>
     <link rel="stylesheet" href="static/css/common.css">
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="loader">
@@ -20,6 +21,9 @@
         <div class="big-card">
             <div class="services-container">
                 
+            </div>
+            <div class="copyright">
+                <p>powered by <a href="https://github.com/vo1ter/vo1ternotdevelopers-dashboard" target="_blank">vo1ternotdeveloper's dashboard</a></p>
             </div>
         </div>
         <div class="big-card">
