Added docker containers display

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
             <div class="services-container">
                 
             </div>
+            <div class="docker-container">
+                
+            </div>
             <div class="copyright">
                 <p>powered by <a href="https://github.com/vo1ter/vo1ternotdevelopers-dashboard" target="_blank">vo1ternotdeveloper's dashboard</a></p>
             </div>
