--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,14 @@
         </div>
     </div>
 </div>
+<div class="notification">
+    <div class="notification-progress"></div>
+    <div id="notification-body">
+        <p>Title</p>
+        <div>Body</div>
+    </div>
+    <div class="close-notification" onclick="closeNotification()">X</div>
+</div>
 </body>
 <script src="static/js/main.js"></script>
 </html>
