Reworked how data is processed by the client, reworked and fixed notifications, reworked loader, readme.md update

--- a/src/index.html
+++ b/src/index.html
@@ -90,13 +90,7 @@
         </div>
     </div>
 </div>
-<div class="notification">
-    <div class="notification-progress"></div>
-    <div id="notification-body">
-        <p>Title</p>
-        <div>Body</div>
-    </div>
-    <div class="close-notification" onclick="closeNotification()">X</div>
+<div class="notification-container">
 </div>
 </body>
 <script src="static/js/main.js"></script>
